CHANGELOG

[0.0.2]
- setDefaultOctave bug fix

[0.0.1]
- Basic operations: pitchClass, setOctave, setDefaultOctave, simplify, semitones, compare
- Arithmetic operations: toFifths, add, subtract, multiply

DIST
[0.0.1] 7065 / 2318

BENCHMARKS