@@ -1,6 +1,6 @@
 {
   "name": "music.operator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The music operator",
   "main": "index.js",
   "scripts": {
